# telegram-cmd-bot

./: .env.example  .gitignore  AGENTS.md  README.md  commands.json.example  pyproject.toml  setup.sh
src/telegram_cmd_bot/: bot_logic.py  main.py
